force-app/main/default/objects/Installation_status__mdt/Installation_status__mdt.object-meta.xml
<CustomObject>
    <description>Stores the status of installation and the steps that have been completed in the installation checklist</description>
    <label>Installation status</label>
    <pluralLabel>Installation statuses</pluralLabel>
</CustomObject>