force-app/main/default/objects/Installation_status__mdt/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the item in the status name has been completed</description>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>