force-app/main/default/objects/Installation_status__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores the step name as displayed on the screen</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>