force-app/main/default/objects/Installation_status__mdt/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Stores the details of the checklist item that  has to be displayed on the screen. Since the description field was not large enough, this was added.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>