force-app/main/default/objects/Installation_status__mdt/fields/Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Updated_by__c</fullName>
    <description>Stores the name of the user that has updated the checkbox</description>
    <label>Updated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>