force-app/main/default/objects/Installation_status__mdt/fields/Updated_date_time__c.field-meta.xml
<CustomField>
    <fullName>Updated_date_time__c</fullName>
    <description>Stores the date and time at which the checklist item was updated</description>
    <label>Updated date/time</label>
    <type>DateTime</type>
</CustomField>