force-app/main/default/objects/Installation_status__mdt/listViews/All_with_Info.listView-meta.xml
<ListView>
    <fullName>All_with_Info</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Order__c</columns>
    <columns>Completed__c</columns>
    <columns>Updated_by__c</columns>
    <columns>Updated_date_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Info</label>
    <language>en_US</language>
</ListView>